refactor: dto 수정 (#105)